@@ -21,9 +21,9 @@ import com.hermesworld.ais.galapagos.topics.config.GalapagosTopicConfig;
 import com.hermesworld.ais.galapagos.topics.config.TopicSchemaConfig;
 import com.hermesworld.ais.galapagos.util.FutureUtil;
 import org.json.JSONObject;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 import org.mockito.invocation.InvocationOnMock;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.core.io.ClassPathResource;
@@ -35,11 +35,11 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-public class TopicServiceImplTest {
+class TopicServiceImplTest {
 
     @MockBean
     private KafkaClusters kafkaClusters;
@@ -60,8 +60,8 @@ public class TopicServiceImplTest {
 
     private TopicBasedRepositoryMock<SchemaMetadata> schemaRepository;
 
-    @Before
-    public void feedMocks() {
+    @BeforeEach
+    void feedMocks() {
         kafkaClusters = mock(KafkaClusters.class);
         applicationsService = mock(ApplicationsService.class);
         namingService = mock(NamingService.class);
@@ -97,7 +97,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testCreateTopic_positive() throws Exception {
+    void testCreateTopic_positive() throws Exception {
         List<InvocationOnMock> createInvs = new ArrayList<>();
 
         when(kafkaTestCluster.createTopic(any(), any())).then(inv -> {
@@ -137,7 +137,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testCreateTopic_downToMaxPartitions() throws Exception {
+    void testCreateTopic_downToMaxPartitions() throws Exception {
         List<InvocationOnMock> createInvs = new ArrayList<>();
 
         when(kafkaTestCluster.createTopic(any(), any())).then(inv -> {
@@ -165,7 +165,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testCreateTopic_criticalReplicationFactor() throws Exception {
+    void testCreateTopic_criticalReplicationFactor() throws Exception {
         List<InvocationOnMock> createInvs = new ArrayList<>();
 
         when(kafkaTestCluster.createTopic(any(), any())).then(inv -> {
@@ -194,7 +194,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testCreateTopic_replicationFactor_downToNumBrokers() throws Exception {
+    void testCreateTopic_replicationFactor_downToNumBrokers() throws Exception {
         List<InvocationOnMock> createInvs = new ArrayList<>();
 
         // 6 is more than the 5 brokers we have, so should be downed to 5
@@ -226,7 +226,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testCreateTopic_useDefaultPartitions() throws Exception {
+    void testCreateTopic_useDefaultPartitions() throws Exception {
         List<InvocationOnMock> createInvs = new ArrayList<>();
 
         when(kafkaTestCluster.createTopic(any(), any())).then(inv -> {
@@ -254,7 +254,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testCreateTopic_nameValidationFails() throws Exception {
+    void testCreateTopic_nameValidationFails() throws Exception {
         List<InvocationOnMock> createInvs = new ArrayList<>();
 
         when(kafkaTestCluster.createTopic(any(), any())).then(inv -> {
@@ -286,7 +286,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should add producer to topic")
-    public void addTopicProducerTest_positive() throws Exception {
+    void addTopicProducerTest_positive() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -307,7 +307,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should fail adding a producer to commands topic")
-    public void addTopicProducerTest_negative() throws Exception {
+    void addTopicProducerTest_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -329,7 +329,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should delete producer from topic")
-    public void deleteTopicProducersTest_positive() throws Exception {
+    void deleteTopicProducersTest_positive() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -351,7 +351,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should not be able to delete producer from commands topic")
-    public void deleteTopicProducersTest_negative() throws Exception {
+    void deleteTopicProducersTest_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -377,7 +377,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should promote a producer to new Topic owner")
-    public void changeOwnerOfTopicTest_positive() throws Exception {
+    void changeOwnerOfTopicTest_positive() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -400,7 +400,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should not promote a producer to new Topic owner for internal topics")
-    public void changeOwnerOfTopicTest_negative() throws Exception {
+    void changeOwnerOfTopicTest_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -423,7 +423,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeleteLatestSchemaVersion() throws Exception {
+    void testDeleteLatestSchemaVersion() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -456,7 +456,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeleteLatestSchemaVersionStaged_negative() throws Exception {
+    void testDeleteLatestSchemaVersionStaged_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
         KafkaCluster prodCluster = mock(KafkaCluster.class);
@@ -498,7 +498,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeleteLatestSchemaVersionWithSubscriber_negative() throws Exception {
+    void testDeleteLatestSchemaVersionWithSubscriber_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -522,8 +522,7 @@ public class TopicServiceImplTest {
         subscription.setClientApplicationId("2");
 
         SubscriptionService subscriptionService = mock(SubscriptionService.class);
-        when(subscriptionService.getSubscriptionsForTopic("test", "topic-1", false))
-                .thenReturn(Collections.singletonList(subscription));
+        when(subscriptionService.getSubscriptionsForTopic("test", "topic-1", false)).thenReturn(List.of(subscription));
 
         ValidatingTopicServiceImpl validatingService = new ValidatingTopicServiceImpl(service, subscriptionService,
                 applicationsService, kafkaClusters, topicConfig, false);
@@ -542,7 +541,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_sameSchema() throws Exception {
+    void testAddSchemaVersion_sameSchema() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -574,7 +573,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_incompatibleSchema() throws Exception {
+    void testAddSchemaVersion_incompatibleSchema() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -607,7 +606,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should not to check for compatibility if skipCompatCheck is set to true")
-    public void testAddSchemaVersion_skipCompatibleSchemaCheckForAdmins() throws Exception {
+    void testAddSchemaVersion_skipCompatibleSchemaCheckForAdmins() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -629,7 +628,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_withMetadata() throws Exception {
+    void testAddSchemaVersion_withMetadata() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -666,7 +665,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_withMetadata_illegalVersionNo_empty() throws Exception {
+    void testAddSchemaVersion_withMetadata_illegalVersionNo_empty() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -694,7 +693,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_withMetadata_illegalVersionNo_notMatching() throws Exception {
+    void testAddSchemaVersion_withMetadata_illegalVersionNo_notMatching() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -731,7 +730,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_invalidSchema() throws Exception {
+    void testAddSchemaVersion_invalidSchema() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -753,7 +752,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_invalidJson() throws Exception {
+    void testAddSchemaVersion_invalidJson() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -774,7 +773,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_DataObjectSimpleAtJSONSchema() throws Exception {
+    void testAddSchemaVersion_DataObjectSimpleAtJSONSchema() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -800,7 +799,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_DataObjectNestedAtJSONSchema() throws Exception {
+    void testAddSchemaVersion_DataObjectNestedAtJSONSchema() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -820,7 +819,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_NoSchemaProp() throws Exception {
+    void testAddSchemaVersion_NoSchemaProp() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -846,7 +845,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testSetSubscriptionApprovalRequired_positive() throws Exception {
+    void testSetSubscriptionApprovalRequired_positive() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -877,7 +876,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testSetSubscriptionApprovalRequired_internalTopic() throws Exception {
+    void testSetSubscriptionApprovalRequired_internalTopic() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -900,7 +899,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testSetSubscriptionApprovalRequired_noop() throws Exception {
+    void testSetSubscriptionApprovalRequired_noop() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -918,7 +917,7 @@ public class TopicServiceImplTest {
 
     @Test
     @DisplayName("should stage new owner on all stages immediately")
-    public void testChangeOwnerStaging() throws Exception {
+    void testChangeOwnerStaging() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
         KafkaCluster testCluster2 = mock(KafkaCluster.class);
@@ -951,7 +950,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeprecateTopic_positive() throws Exception {
+    void testDeprecateTopic_positive() throws Exception {
         KafkaCluster testCluster2 = mock(KafkaCluster.class);
         when(testCluster2.getId()).thenReturn("test2");
         KafkaCluster testCluster3 = mock(KafkaCluster.class);
@@ -987,7 +986,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeprecateTopic_noSuchTopic() throws Exception {
+    void testDeprecateTopic_noSuchTopic() throws Exception {
         KafkaCluster testCluster2 = mock(KafkaCluster.class);
         when(testCluster2.getId()).thenReturn("test2");
         KafkaCluster testCluster3 = mock(KafkaCluster.class);
@@ -1026,7 +1025,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testunmarkTopicDeprecated() throws Exception {
+    void testunmarkTopicDeprecated() throws Exception {
         KafkaCluster testCluster2 = mock(KafkaCluster.class);
         when(testCluster2.getId()).thenReturn("test2");
         KafkaCluster testCluster3 = mock(KafkaCluster.class);
@@ -1057,7 +1056,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testChangeDescOfTopic() throws Exception {
+    void testChangeDescOfTopic() throws Exception {
 
         TopicMetadata topic = new TopicMetadata();
         topic.setName("topic-1");
@@ -1077,7 +1076,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_DataObjectNestedAtJSONSchemaAndDataTopic() throws Exception {
+    void testAddSchemaVersion_DataObjectNestedAtJSONSchemaAndDataTopic() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -1097,7 +1096,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_WithChangeDesc() throws Exception {
+    void testAddSchemaVersion_WithChangeDesc() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -1133,7 +1132,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testAddSchemaVersion_WithChangeDesc_negative() throws Exception {
+    void testAddSchemaVersion_WithChangeDesc_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -1162,7 +1161,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeleteSchemaWithSub_positive() throws Exception {
+    void testDeleteSchemaWithSub_positive() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -1187,8 +1186,7 @@ public class TopicServiceImplTest {
         subscription.setClientApplicationId("2");
 
         SubscriptionService subscriptionService = mock(SubscriptionService.class);
-        when(subscriptionService.getSubscriptionsForTopic("test", "topic-1", false))
-                .thenReturn(Collections.singletonList(subscription));
+        when(subscriptionService.getSubscriptionsForTopic("test", "topic-1", false)).thenReturn(List.of(subscription));
 
         ValidatingTopicServiceImpl validatingService = new ValidatingTopicServiceImpl(service, subscriptionService,
                 applicationsService, kafkaClusters, topicConfig, true);
@@ -1199,7 +1197,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeleteSchemaWithSub_negative() throws Exception {
+    void testDeleteSchemaWithSub_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
 
@@ -1224,8 +1222,7 @@ public class TopicServiceImplTest {
         subscription.setClientApplicationId("2");
 
         SubscriptionService subscriptionService = mock(SubscriptionService.class);
-        when(subscriptionService.getSubscriptionsForTopic("test", "topic-1", false))
-                .thenReturn(Collections.singletonList(subscription));
+        when(subscriptionService.getSubscriptionsForTopic("test", "topic-1", false)).thenReturn(List.of(subscription));
 
         ValidatingTopicServiceImpl validatingService = new ValidatingTopicServiceImpl(service, subscriptionService,
                 applicationsService, kafkaClusters, topicConfig, false);
@@ -1242,7 +1239,7 @@ public class TopicServiceImplTest {
     }
 
     @Test
-    public void testDeleteLatestSchemaVersionStagedSchemaDeleteSub_negative() throws Exception {
+    void testDeleteLatestSchemaVersionStagedSchemaDeleteSub_negative() throws Exception {
         TopicServiceImpl service = new TopicServiceImpl(kafkaClusters, applicationsService, namingService, userService,
                 topicConfig, eventManager);
         SubscriptionService subscriptionService = mock(SubscriptionService.class);
@@ -1273,8 +1270,7 @@ public class TopicServiceImplTest {
         subscription.setTopicName("topic-1");
         subscription.setClientApplicationId("2");
 
-        when(subscriptionService.getSubscriptionsForTopic("prod", "topic-1", false))
-                .thenReturn(Collections.singletonList(subscription));
+        when(subscriptionService.getSubscriptionsForTopic("prod", "topic-1", false)).thenReturn(List.of(subscription));
 
         prodTopicRepository.save(topic1).get();
 
